--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <form action="">
         <input type="text" placeholder="name">
         <input type="password" placeholder="email">
-        <button class="form-btn" type="submit">Sign In</button>
+        <button class="form-btn" type="#">Sign In</button>
       </form>
     </div>
 
@@ -52,7 +52,7 @@
         <input type="text" placeholder="name">
         <input type="text" placeholder="email">
         <input type="password" placeholder="password">
-        <button class="form-btn" type="submit">Sing Up</button>
+        <button class="form-btn" type="#">Sing Up</button>
       </form>
     </div>
 
